deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-forum
spec:
  ingressClassName: nginx
  rules:
  - host: frontend.local
    http:
      paths:
      - path: /frontend
        pathType: Prefix
        backend:
          service:
            name: client
            port:
              number: 80
  - host: backend.local
    http:
      paths:
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: server
            port:
              number: 5000
